fixed alignment of div "about-info

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -183,6 +183,10 @@ tr:hover td{
 
 .pagination a:hover:not(.active) {background-color: #ddd;}
 
+p.about-info {
+    margin-bottom: 20px;
+}
+
 @media only screen and (max-width: 960px) {
     .col-xs-12 {
       display: flex;
